--- a/plugin.xml
+++ b/plugin.xml
@@ -26,6 +26,7 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.CAMERA" />
             <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
